[package]
name = "xtkq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.7.5", features=["macros"]}
oracle = "0.5.7"
serde = {version="1.0.202", features=["derive"]}
serde_json = "1"
tokio = { version = "1.37.0", features = ["full"] }
